Fix position override for uneventful days

--- a/newtab.css
+++ b/newtab.css
@@ -67,7 +67,7 @@
 
 .info-day-uneventful {
   font-size: small;
-  top: -280px;
+  top: 80px;
 }
 
 .info-single {
